[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["Kernel-rb" , "Tensor-programming" ] # i just watch a video from tensor-programming and i want to give him credit     

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
